# pacman-nix-hooks

./: .gitignore  Makefile  README.md  flake.nix  pacman-nix-hooks.cabal
app/: Main.hs
hooks/: upgrade-nix.hook
src/: Action.hs
tests/: Main.hs  Test.hs
