cabal-version:      2.4
name:               pacman-nix-hooks
version:            0.0.1

author:             Walker
maintainer:         walker@praiseweb.com.br

extra-source-files:
    README.md

executable update-nix
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
