cabal-version:      2.4
name:               pacman-nix-hooks
version:            0.0.1

author:             Walker
maintainer:         walker@praiseweb.com.br

extra-source-files:
    README.md

library
   exposed-modules:  Action
   hs-source-dirs:   src
   build-depends:    base
   default-language: GHC2021

test-suite test-pacman-nix-hooks
   main-is:          Test.hs
   build-depends:    
        base
      , tasty
      , tasty-hunit
      , transformers
      , pacman-nix-hooks
   hs-source-dirs:   tests
   type:             exitcode-stdio-1.0
   default-language: GHC2021

executable upgrade-nix
   main-is:          Main.hs
   build-depends:    
        base
      , process
      , pacman-nix-hooks
   hs-source-dirs:   app
   default-language: GHC2021
